@startuml MiniChatGPT_ClassDiagram
title SaveurIA - Class Diagram

!theme plain
skinparam classBackgroundColor #FFFFFF
skinparam classBorderColor #000000
skinparam classArrowThickness 2
skinparam arrowColor #000000
skinparam attributeIconSize 0

' ==================== ENTITIES ====================

class User {
    - id: bigint
    - name: string
    - email: string
    - email_verified_at: datetime
    - password: string
    - pending_email: string
    - pending_email_sent_at: datetime
    - pending_email_token: string
    - two_factor_secret: text
    - two_factor_recovery_codes: text
    - two_factor_confirmed_at: datetime
    - remember_token: string
    - profile_photo_path: string
    - created_at: datetime
    - updated_at: datetime
    ---
    + conversations(): HasMany
    + customInstruction(): HasOne
    + userStats(): HasOne
    + messages(): HasManyThrough
    + getDashboardStats(): array
    + sendEmailVerificationNotification()
    + sendPasswordResetNotification(token)
}

class Conversation {
    - id: bigint
    - title: string
    - model_used: string
    - created_at: datetime
    - updated_at: datetime
    - deleted_at: datetime
    ---
    + user(): BelongsTo
    + messages(): HasMany
}

class Message {
    - id: bigint
    - role: enum {user|assistant}
    - content: text
    - model: string
    - tokens_used: int
    - cost_usd: decimal(8,6)
    - created_at: datetime
    - updated_at: datetime
    ---
    + conversation(): BelongsTo
    + llmModel(): BelongsTo
}

class CustomInstruction {
    - id: bigint
    - instructions: text
    - enabled: boolean
    - created_at: datetime
    - updated_at: datetime
    ---
    + user(): BelongsTo
}

class LlmModel {
    - id: bigint
    - name: string
    - provider: string
    - model_id: string
    - description: text
    - enabled: boolean
    - max_tokens: int
    - config: json
    - created_at: datetime
    - updated_at: datetime
    ---
    + messages(): HasMany
    + getEnabled(): Collection
}

class UserStats {
    - id: bigint
    - total_messages: int
    - total_conversations: int
    - total_tokens: bigint
    - monthly_cost: decimal(10,6)
    - monthly_messages: int
    - last_activity_at: datetime
    - stats_computed_at: datetime
    - created_at: datetime
    - updated_at: datetime
    ---
    + user(): BelongsTo
}

' ==================== RELATIONS ====================

' UML Cardinalities:
' 1     = exactly 1
' 0..1  = 0 or 1 (optional)
' 0..*  = 0 or more (collection)
' 1..*  = 1 or more

User "1" -- "0..*" Conversation : owns
Conversation "1" -- "0..*" Message : contains
User "1" -- "0..1" CustomInstruction : has
User "1" -- "0..1" UserStats : tracks
Message "0..*" -- "0..1" LlmModel : uses

@enduml
